# kisaragi-booth-utility

./: .misspell  Cargo.toml  LICENSE-Apache-2.0.txt  LICENSE-MIT.txt  README.md  misspell.sh
.github/: markdown-lint-config.yml
.github/workflows/: markdownlint.yml  release-binary.yml  rust.yml
src/: booth.rs  main.rs  pretty_size.rs  sqlite.rs
