[package]
name = "kisaragi-booth-utility"
version = "0.1.2"
authors = [
    "Kisaragi Marine <kisaragi.effective@gmail.com>",
]
description = "Utility tool for https://booth.pm."
readme = "README.md"
categories = ["authentication", "command-line-utilities", "database"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KisaragiEffective/kisaragi-booth-utility"
# No plan at this point
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.0", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json", "gzip", "deflate", "multipart"] }
select = "0.6.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.94"
sqlite3 = "0.24.0"
strum = { version = "0.24.1", features = ["derive"] }
tempfile = "3.3.0"
thiserror = "1.0.39"
tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread", "macros"] }
