[package]
name = "kisaragi-booth-utility"
version = "0.1.2"
authors = [
    "Kisaragi Marine <kisaragi.effective@gmail.com>",
]
description = "Utility tool for https://booth.pm."
readme = "README.md"
categories = ["authentication", "command-line-utilities", "database"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KisaragiEffective/kisaragi-booth-utility"
# No plan at this point
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
reqwest = { version = "0.11.22", default-features = false, features = ["json", "gzip", "deflate", "multipart", "rustls-tls-native-roots"] }
select = "0.6.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlite3 = "0.24.0"
strum = { version = "0.26.1", features = ["derive"] }
tempfile = "3.8.1"
thiserror = "1.0.50"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
